# assurance-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
assurance_cli/: __init__.py  cache.py  config.py  exceptions.py  main.py  markdown.py  presets.py  version.py
assurance_cli/atlassian/: __init__.py  client.py  confluence.py  jira.py  markdown.py
assurance_cli/azure/: __init__.py  cli.py  markdown.py
assurance_cli/code/: __init__.py  github.py  local.py  markdown.py
assurance_cli/dataverse/: __init__.py  markdown.py  pac.py
assurance_cli/reports/: __init__.py  evidence_pack.py
assurance_cli/util/: redaction.py
docs/: assurance-cli-skill.md  assurance-code-evidence-spec.md  assurance-evidence-exclusions-spec.md  assurance-evidence-signals-spec.md  assurance-workbench-ui-plan.md  assurance-workbench-ui-spec.md  assurance.agent.md  topic-search-expansion-note.md
tests/: test_atlassian_http.py  test_azure_cli.py  test_cache_cli.py  test_cli_integration.py  test_cli_smoke.py  test_code_github.py  test_code_local.py  test_dataverse_pac.py  test_evidence_pack.py  test_markdown.py  test_presets.py  test_queries.py  test_redaction.py
