[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assurance-cli"
version = "0.1.0"
description = "Read-only assurance evidence gathering CLI for Atlassian, Azure, and Dataverse."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "markdownify>=0.12",
  "python-dotenv>=1.0",
  "rich>=13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "respx>=0.21",
]

[project.scripts]
assurance = "assurance_cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
